make ut.sine public function and update tutorial notebooks

--- a/tutorials/experiment_design_01.ipynb
+++ b/tutorials/experiment_design_01.ipynb
@@ -211,8 +211,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sine_y = ut._sine(f=Q_(1,\"Hz\"), amp=Q_([[0,1,0]],\"mm\"))\n",
-    "coords = ut._lcs_coords_from_ts(sine_y,time)\n",
+    "sine_y = ut.sine(f=Q_(1,\"Hz\"), amp=Q_([[0,1,0]],\"mm\"))\n",
+    "coords = ut.lcs_coords_from_ts(sine_y,time)\n",
     "csm.add_cs(coordinate_system_name=\"tcp_sine_y\", reference_system_name=\"tcp_wire\", lcs=LCS(coordinates=coords))"
    ]
   },
@@ -229,8 +229,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sine_z = ut._sine(f=Q_(1,\"Hz\"), amp=Q_([[0,0,2]],\"mm\"),bias=Q_([0,0,0],\"mm\"))\n",
-    "coords = ut._lcs_coords_from_ts(sine_z,time)\n",
+    "sine_z = ut.sine(f=Q_(1,\"Hz\"), amp=Q_([[0,0,2]],\"mm\"),bias=Q_([0,0,0],\"mm\"))\n",
+    "coords = ut.lcs_coords_from_ts(sine_z,time)\n",
     "csm.add_cs(coordinate_system_name=\"tcp_sine_z\", reference_system_name=\"tcp_wire\", lcs=LCS(coordinates=coords))"
    ]
   },
