--- a/tutorials/welding_example_02_weaving.ipynb
+++ b/tutorials/welding_example_02_weaving.ipynb
@@ -249,7 +249,7 @@
    "metadata": {},
    "source": [
     "## add a sine wave to the TCP movement\n",
-    "We now want to add a weaving motion along the y-axis (horizontal plane) of our TCP motion. We can define a general weaving motion using the `TimeSeries` class."
+    "We now want to add a weaving motion along the y-axis (horizontal plane) of our TCP motion. We can define a general weaving motion using the `weldx.utility.sine` function that creates `TimeSeries` class."
    ]
   },
   {
@@ -258,12 +258,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sine_exp(amp, freq):\n",
-    "    \"\"\"Create a simple sine TimeSeries.\"\"\"\n",
-    "    expr_string = \"amp*sin(f*t)\"\n",
-    "    parameters = {\"amp\": amp, \"f\": freq}\n",
-    "    expr = MathematicalExpression(expression=expr_string, parameters=parameters)\n",
-    "    return TimeSeries(data=expr)"
+    "ts_sine = ut.sine(f = Q_(1.5 * 2 * np.pi, \"Hz\"), amp = Q_([[0, 0.75, 0]], \"mm\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use the `weldx.utility.lcs_coords_from_ts` function to create the translation coordinate vectors at our specified timestamps."
    ]
   },
   {
@@ -272,16 +274,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ts_sine = sine_exp(Q_([[0, 0.75, 0]], \"mm\"), Q_(1.5 * 2 * np.pi, \"Hz\"))\n",
-    "\n",
-    "ts_sine_data = ts_sine.interp_time(\n",
-    "    pd.timedelta_range(start=t_start, end=t_end, freq=\"10ms\")\n",
-    ")\n",
-    "\n",
-    "# assign vector coordinates and convert to m\n",
-    "ts_sine_data = ts_sine_data.rename({\"dim_1\": \"c\"}).assign_coords({\"c\": [\"x\", \"y\", \"z\"]})\n",
-    "ts_sine_data.data = ts_sine_data.data.magnitude\n",
-    "ts_sine_data[\"time\"] = pd.TimedeltaIndex(ts_sine_data[\"time\"].data)"
+    "t = pd.timedelta_range(start=t_start, end=t_end, freq=\"10ms\")\n",
+    "ts_sine_data = ut.lcs_coords_from_ts(ts_sine,t)"
    ]
   },
   {
@@ -488,17 +482,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ts_sine = sine_exp(Q_([[0, 0, 1]], \"mm\"), Q_(1 / 8 * 2 * np.pi, \"Hz\"))\n",
+    "ts_sine = ut.sine(f=Q_(1 / 8 * 2 * np.pi, \"Hz\"), amp=Q_([[0, 0, 1]], \"mm\"))\n",
     "\n",
-    "ts_sine_data = ts_sine.interp_time(\n",
-    "    pd.timedelta_range(start=\"0s\", end=\"8s\", freq=\"25ms\")\n",
-    ")\n",
-    "\n",
-    "# assign vector coordinates and convert to m\n",
-    "ts_sine_data = ts_sine_data.rename({\"dim_1\": \"c\"}).assign_coords({\"c\": [\"x\", \"y\", \"z\"]})\n",
-    "ts_sine_data.data = ts_sine_data.data.magnitude\n",
-    "ts_sine_data[\"time\"] = pd.TimedeltaIndex(ts_sine_data[\"time\"].data)\n",
-    "\n",
+    "t = pd.timedelta_range(start=\"0s\", end=\"8s\", freq=\"25ms\")\n",
+    "ts_sine_data = ut.lcs_coords_from_ts(ts_sine,t)\n",
     "tcp_sine2 = lcs(coordinates=ts_sine_data)"
    ]
   },
