--- a/tutorials/experiment_design_01.ipynb
+++ b/tutorials/experiment_design_01.ipynb
@@ -77,7 +77,7 @@
    "outputs": [],
    "source": [
     "def distance(ptc,lcs_name,time):\n",
-    "    \"\"\"Calcualate minimal distance between geometry rasterization pointcloud and 3D trace\"\"\"\n",
+    "    \"\"\"Calculate minimal distance between geometry rasterization pointcloud and 3D trace\"\"\"\n",
     "    \n",
     "    lcs_interp = csm.get_cs(coordinate_system_name=lcs_name,reference_system_name=\"workpiece\",time=time)\n",
     "    \n",
