Start transition to PyFilesystem

--- a/tutorials/quality_standards.ipynb
+++ b/tutorials/quality_standards.ipynb
@@ -16,10 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [
-    "from weldx.config import Config\n"
+    "from weldx.config import Config, QualityStandard\n",
+    "import fs\n",
+    "import yaml\n",
+    "from pathlib import Path"
    ],
    "metadata": {
     "collapsed": false,
@@ -83,8 +86,7 @@
     "If you don't provide one, the latest available version will be used.\n",
     "And that's all there is to know about using standards.\n",
     "\n",
-    "## Creating custom standards\n",
-    "\n"
+    "## Creating custom standards"
    ],
    "metadata": {
     "collapsed": false,
@@ -92,13 +94,122 @@
      "name": "#%% md\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "`-- resources\n",
+      "    `-- my_organization\n",
+      "        |-- manifests\n",
+      "        |   `-- my_standard-1.0.0.yaml\n",
+      "        `-- schemas\n"
+     ]
+    }
+   ],
+   "source": [
+    "mem_fs = fs.open_fs('mem://')\n",
+    "mem_fs.makedirs(\"resources/my_organization/manifests\")\n",
+    "mem_fs.makedirs(\"resources/my_organization/schemas\")\n",
+    "mem_fs.listdir(\"\")\n",
+    "\n",
+    "mem_fs.create(\"resources/my_organization/manifests/my_standard-1.0.0.yaml\")\n",
+    "mem_fs.tree()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "manifest = \"\"\"\n",
+    "id: http://stsci.edu/asdf/extensions/transform/manifests/transform-1.0.0\n",
+    "extension_uri: http://stsci.edu/asdf/extensions/transform-1.0.0\n",
+    "title: Transform extension 1.0.0\n",
+    "description: |-\n",
+    "  A set of tags for serializing data transforms.\n",
+    "asdf_standard_requirement: 1.0.0\n",
+    "tags:\n",
+    "- uri: \"http://weldx.bam.de/schemas/weldx/core/transformations/local_coordinate_system-1.0.0\"\n",
+    "  file: \"lcs_schema_fancy\"\n",
+    "\"\"\""
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "execution_count": 3,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "with mem_fs.open(\"resources/my_organization/manifests/my_standard-1.0.0.yaml\", \"w\") as file:\n",
+    "    file.write(manifest)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'id': 'http://stsci.edu/asdf/extensions/transform/manifests/transform-1.0.0', 'extension_uri': 'http://stsci.edu/asdf/extensions/transform-1.0.0', 'title': 'Transform extension 1.0.0', 'description': 'A set of tags for serializing data transforms.', 'asdf_standard_requirement': '1.0.0', 'tags': [{'uri': 'http://weldx.bam.de/schemas/weldx/core/transformations/local_coordinate_system-1.0.0', 'file': 'lcs_schema_fancy'}]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "with mem_fs.open(\"resources/my_organization/manifests/my_standard-1.0.0.yaml\", \"r\") as file:\n",
+    "    content = yaml.load(file, Loader=yaml.SafeLoader)\n",
+    "    print(content)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [],
+   "source": [
+    "qs = QualityStandard(Path(\"resources/my_organization\"), mem_fs)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "name": "weldx",
    "language": "python",
-   "name": "python3"
+   "display_name": "weldx"
   },
   "language_info": {
    "codemirror_mode": {
