--- a/tutorials/custom_metadata.ipynb
+++ b/tutorials/custom_metadata.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Adding custom meta-data\n",
-    "It is possible to attach and store arbitrary meta-data to WelDX objects as python attributes.\n",
+    "# Adding custom metadata\n",
+    "It is possible to attach and store arbitrary metadata to WelDX objects as python attributes.\n",
     "The WelDX API reserves the attribute names `wx_metadata` and `wx_user` for these use cases.\n",
     "\n",
     "The `wx_metadata` field is intended for additional information that might be required as part of a custom Quality Standard. The `wx_user` attribute is intended to add any user data and should only be used for additional information that will not get accessed by the API. \n",
     "\n",
     "## A small example\n",
-    "Let's say we want to use meta-data to add a custom information to a current-sensor used during a welding experiment. As an example we want to add a timestamp to indicate when the sensor was last calibrated."
+    "Let's say we want to use metadata to add a custom information to a current-sensor used during a welding experiment. As an example we want to add a timestamp to indicate when the sensor was last calibrated."
    ]
   },
   {
@@ -48,11 +48,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we want to add the timestamp of the last time the sensor was calibrated as additional meta-data. To do this we simple assign a new `.wx_metadata` attribute to the sensor. We will also add a small personal note to `wx_user`.\n",
+    "Now we want to add the timestamp of the last time the sensor was calibrated as additional metadata. To do this we simple assign a new `.wx_metadata` attribute to the sensor. We will also add a small personal note to `wx_user`.\n",
     "\n",
-    "<div class=\"alert alert-block alert-info\"><b>Note:\n",
-    "    By convention the meta-data fields should be python dictionaries.\n",
-    "</b>"
+    "*Note: By convention the metadata fields should be python dictionaries.*"
    ]
   },
   {
@@ -71,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's look at the ASDF file contents with our meta-data:"
+    "Now let's look at the ASDF file contents with our metadata:"
    ]
   },
   {
@@ -90,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, our custom meta-data gets serialized into the ASDF tree:\n",
+    "As we can see, our custom metadata gets serialized into the ASDF tree:\n",
     "```yaml\n",
     "wx_metadata:\n",
     "    calibration: !<tag:weldx.bam.de:weldx/time/timestamp-1.0.0> {value: '2020-06-01T00:00:00'}\n",
