Finish transformation to pyfilesystem and continue tutorial

--- a/tutorials/quality_standards.ipynb
+++ b/tutorials/quality_standards.ipynb
@@ -22,7 +22,7 @@
     "from weldx.config import Config, QualityStandard\n",
     "import fs\n",
     "import yaml\n",
-    "from pathlib import Path"
+    "from weldx.measurement import  GenericEquipment"
    ],
    "metadata": {
     "collapsed": false,
@@ -86,7 +86,15 @@
     "If you don't provide one, the latest available version will be used.\n",
     "And that's all there is to know about using standards.\n",
     "\n",
-    "## Creating custom standards"
+    "## Creating custom standards\n",
+    "\n",
+    "Creating custom standards is fairly easy if you already know how a schema file looks like.\n",
+    "To keep things simple, we won't discuss here how you can provide an installable standard because this might be a bit\n",
+    "confusing at the beginning.\n",
+    "Instead we will just focus on the files and their content.\n",
+    "\n",
+    "Let's say we want to set a new quality standard for the `GenericEquipment`.\n",
+    "In our short example, we will use the following file structure:"
    ],
    "metadata": {
     "collapsed": false,
@@ -107,7 +115,8 @@
       "    `-- my_organization\n",
       "        |-- manifests\n",
       "        |   `-- my_standard-1.0.0.yaml\n",
-      "        `-- schemas\n"
+      "        `-- schemas\n",
+      "            `-- my_schema-1.0.0.yaml\n"
      ]
     }
    ],
@@ -118,12 +127,60 @@
     "mem_fs.listdir(\"\")\n",
     "\n",
     "mem_fs.create(\"resources/my_organization/manifests/my_standard-1.0.0.yaml\")\n",
+    "mem_fs.create(\"resources/my_organization/schemas/my_schema-1.0.0.yaml\")\n",
     "mem_fs.tree()"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The directory structure is based on how an installable standard has to be organized but the only thing that really\n",
+    "matters for us at the moment is the content of the `my_organization` directory.\n",
+    "It is subdivided into `manifests` and `schemas`.\n",
+    "All of your custom schemas go into the `schemas` directory.\n",
+    "The `manifests` directory contains so called manifest files.\n",
+    "Their purpose is to manage which schema belongs to which version of your standard.\n",
+    "All manifests are YAML files and must be named like your standard with the corresponding version number attached to the\n",
+    "end.\n",
+    "Here we will only use a single manifest file called `my_standard-1.0.0.yaml`.\n",
+    "\n",
+    "Now before we start looking into the different files, let's create an instance of the `GenericEpuipment` class that we\n",
+    "want to serialize using a new quality standard:"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "my_equipment = GenericEquipment(\"my_equipment\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   },
@@ -148,12 +205,12 @@
      "name": "#%%\n"
     }
    },
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "with mem_fs.open(\"resources/my_organization/manifests/my_standard-1.0.0.yaml\", \"w\") as file:\n",
@@ -168,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -192,10 +249,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "outputs": [],
    "source": [
-    "qs = QualityStandard(Path(\"resources/my_organization\"), mem_fs)"
+    "qs = QualityStandard(mem_fs.opendir(\"resources/my_organization\"))"
    ],
    "metadata": {
     "collapsed": false,
