--- a/tutorials/quality_standards.ipynb
+++ b/tutorials/quality_standards.ipynb
@@ -17,11 +17,23 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\vhirtham\\PycharmProjects\\bam\\weldx\\weldx\\__init__.py:11: UserWarning: Using local weldx package files without version information.\n",
+      "Consider running 'python setup.py --version' or 'pip install -e .' in the weldx root repository\n",
+      "  \"Using local weldx package files without version information.\\n\"\n"
+     ]
+    }
+   ],
    "source": [
     "from weldx.config import Config, QualityStandard\n",
     "import fs\n",
     "import yaml\n",
+    "import weldx\n",
+    "import asdf\n",
     "from weldx.measurement import  GenericEquipment"
    ],
    "metadata": {
@@ -116,7 +128,7 @@
       "        |-- manifests\n",
       "        |   `-- my_standard-1.0.0.yaml\n",
       "        `-- schemas\n",
-      "            `-- my_schema-1.0.0.yaml\n"
+      "            `-- my_generic_epuipment_schema-1.0.0.yaml\n"
      ]
     }
    ],
@@ -127,7 +139,7 @@
     "mem_fs.listdir(\"\")\n",
     "\n",
     "mem_fs.create(\"resources/my_organization/manifests/my_standard-1.0.0.yaml\")\n",
-    "mem_fs.create(\"resources/my_organization/schemas/my_schema-1.0.0.yaml\")\n",
+    "mem_fs.create(\"resources/my_organization/schemas/my_generic_epuipment_schema-1.0.0.yaml\")\n",
     "mem_fs.tree()"
    ],
    "metadata": {
@@ -176,7 +188,140 @@
   },
   {
    "cell_type": "markdown",
-   "source": [],
+   "source": [
+    "Every WelDX type gives you the option to add arbitrary meta data to it that will also be stored in an ASDF file.\n",
+    "To do so, we just need to assigns a python dictionary to the reserved member variable `wx_metadata` (TODO: Add tutorial link).\n",
+    "The content of the meta data is not restricted in any way by the default WelDX standard and purely optional.\n",
+    "We want to change this now with our custom standard so that there must be a meta data attached to the object that\n",
+    "contains an integer that represents the serial number of the equipment.\n",
+    "To do so, we start with the default schema used by WelDX which looks like this:\n",
+    "\n",
+    "~~~ yaml\n",
+    "%YAML 1.1\n",
+    "---\n",
+    "$schema: \"http://stsci.edu/schemas/yaml-schema/draft-01\"\n",
+    "id: \"http://weldx.bam.de/schemas/weldx/equipment/generic_equipment-1.0.0\"\n",
+    "tag: \"tag:weldx.bam.de:weldx/equipment/generic_equipment-1.0.0\"\n",
+    "\n",
+    "title: |\n",
+    "  A generic piece of equipment.\n",
+    "description: |\n",
+    "  Generic placeholder class do describe any kind of equipment with additional metadata.\n",
+    "  Equipments can be associated with signal sources and data transformations.\n",
+    "type: object\n",
+    "properties:\n",
+    "  name:\n",
+    "    type: string\n",
+    "  sources:\n",
+    "    type: array\n",
+    "    items:\n",
+    "      $ref: \"tag:weldx.bam.de:weldx/measurement/source-1.0.0\"\n",
+    "  data_transformations:\n",
+    "    type: array\n",
+    "    items:\n",
+    "      $ref: \"tag:weldx.bam.de:weldx/measurement/data_transformation-1.0.0\"\n",
+    "\n",
+    "propertyOrder: [name, sources, data_transformations]\n",
+    "required: [name]\n",
+    "\n",
+    "flowStyle: block\n",
+    "...\n",
+    "~~~\n",
+    "\n",
+    "We achieve our goal by simply adding `wx_matadata` to the following additional property:\n",
+    "\n",
+    "~~~ yaml\n",
+    "wx_metadata:\n",
+    "  type: object\n",
+    "  properties:\n",
+    "    serial_number:\n",
+    "      type: number\n",
+    "  required: [serial_number]\n",
+    "~~~\n",
+    "\n",
+    "The new file content looks like this:"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "schema_file = \"\"\"\n",
+    "%YAML 1.1\n",
+    "---\n",
+    "$schema: \"http://stsci.edu/schemas/yaml-schema/draft-01\"\n",
+    "id: \"http://weldx.bam.de/schemas/weldx/equipment/generic_equipment-1.0.0\"\n",
+    "tag: \"tag:weldx.bam.de:weldx/equipment/generic_equipment-1.0.0\"\n",
+    "\n",
+    "title: |\n",
+    "  A generic piece of equipment.\n",
+    "description: |\n",
+    "  Generic placeholder class do describe any kind of equipment with additional metadata.\n",
+    "  Equipments can be associated with signal sources and data transformations.\n",
+    "type: object\n",
+    "properties:\n",
+    "  name:\n",
+    "    type: string\n",
+    "  sources:\n",
+    "    type: array\n",
+    "    items:\n",
+    "      $ref: \"tag:weldx.bam.de:weldx/measurement/source-1.0.0\"\n",
+    "  data_transformations:\n",
+    "    type: array\n",
+    "    items:\n",
+    "      $ref: \"tag:weldx.bam.de:weldx/measurement/data_transformation-1.0.0\"\n",
+    "  wx_metadata:\n",
+    "    type: object\n",
+    "    properties:\n",
+    "      serial_number:\n",
+    "        type: number\n",
+    "    required: [serial_number]\n",
+    "\n",
+    "propertyOrder: [name, sources, data_transformations]\n",
+    "required: [name, wx_metadata]\n",
+    "\n",
+    "flowStyle: block\n",
+    "...\n",
+    "\"\"\""
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    "# write to the file\n",
+    "with mem_fs.open(\"resources/my_organization/schemas/my_generic_epuipment_schema-1.0.0.yaml\", \"w\") as file:\n",
+    "    file.write(schema_file)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "What remains now is to write the corresponding manifest file.\n",
+    "\n",
+    "\n",
+    "\n"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -187,7 +332,7 @@
   {
    "cell_type": "code",
    "source": [
-    "manifest = \"\"\"\n",
+    "manifest_file = \"\"\"\n",
     "id: http://stsci.edu/asdf/extensions/transform/manifests/transform-1.0.0\n",
     "extension_uri: http://stsci.edu/asdf/extensions/transform-1.0.0\n",
     "title: Transform extension 1.0.0\n",
@@ -195,8 +340,8 @@
     "  A set of tags for serializing data transforms.\n",
     "asdf_standard_requirement: 1.0.0\n",
     "tags:\n",
-    "- uri: \"http://weldx.bam.de/schemas/weldx/core/transformations/local_coordinate_system-1.0.0\"\n",
-    "  file: \"lcs_schema_fancy\"\n",
+    "- uri: \"http://weldx.bam.de/schemas/weldx/equipment/generic_equipment-1.0.0\"\n",
+    "  file: \"my_generic_epuipment_schema-1.0.0\"\n",
     "\"\"\""
    ],
    "metadata": {
@@ -205,16 +350,18 @@
      "name": "#%%\n"
     }
    },
-   "execution_count": 4,
+   "execution_count": 6,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "outputs": [],
    "source": [
+    "# write to the file\n",
     "with mem_fs.open(\"resources/my_organization/manifests/my_standard-1.0.0.yaml\", \"w\") as file:\n",
-    "    file.write(manifest)"
+    "    file.write(manifest_file)\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -225,13 +372,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'id': 'http://stsci.edu/asdf/extensions/transform/manifests/transform-1.0.0', 'extension_uri': 'http://stsci.edu/asdf/extensions/transform-1.0.0', 'title': 'Transform extension 1.0.0', 'description': 'A set of tags for serializing data transforms.', 'asdf_standard_requirement': '1.0.0', 'tags': [{'uri': 'http://weldx.bam.de/schemas/weldx/core/transformations/local_coordinate_system-1.0.0', 'file': 'lcs_schema_fancy'}]}\n"
+      "{'id': 'http://stsci.edu/asdf/extensions/transform/manifests/transform-1.0.0', 'extension_uri': 'http://stsci.edu/asdf/extensions/transform-1.0.0', 'title': 'Transform extension 1.0.0', 'description': 'A set of tags for serializing data transforms.', 'asdf_standard_requirement': '1.0.0', 'tags': [{'uri': 'http://weldx.bam.de/schemas/weldx/equipment/generic_equipment-1.0.0', 'file': 'my_generic_epuipment_schema-1.0.0'}]}\n"
      ]
     }
    ],
@@ -249,10 +396,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "qs = QualityStandard(mem_fs.opendir(\"resources/my_organization\"))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [],
+   "source": [
+    "Config._add_quality_standard(qs)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [],
+   "source": [
+    "Config.enable_quality_standard(\"my_standard\")\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ups..., got some lengthy validation error...\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "   buffer = weldx.asdf.utils._write_buffer({\"equipment\":my_equipment})\n",
+    "except asdf.ValidationError:\n",
+    "    print(\"Ups..., got some lengthy validation error...\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [],
+   "source": [
+    "my_equipment.wx_metadata = {\"serial_number\": \"not a number\"}"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ups..., got some lengthy validation error...\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "   buffer = weldx.asdf.utils._write_buffer({\"equipment\":my_equipment})\n",
+    "except asdf.ValidationError:\n",
+    "    print(\"Ups..., got some lengthy validation error...\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [],
+   "source": [
+    "my_equipment.wx_metadata = {\"serial_number\": 1234}"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "<style type=\"text/css\">pre { line-height: 125%; margin: 0; }\ntd.linenos pre { color: #000000; background-color: #f0f0f0; padding-left: 5px; padding-right: 5px; }\nspan.linenos { color: #000000; background-color: #f0f0f0; padding-left: 5px; padding-right: 5px; }\ntd.linenos pre.special { color: #000000; background-color: #ffffc0; padding-left: 5px; padding-right: 5px; }\nspan.linenos.special { color: #000000; background-color: #ffffc0; padding-left: 5px; padding-right: 5px; }\n.highlight .hll { background-color: #ffffcc }\n.highlight { background: #f8f8f8; }\n.highlight .c { color: #408080; font-style: italic } /* Comment */\n.highlight .err { border: 1px solid #FF0000 } /* Error */\n.highlight .k { color: #008000; font-weight: bold } /* Keyword */\n.highlight .o { color: #666666 } /* Operator */\n.highlight .ch { color: #408080; font-style: italic } /* Comment.Hashbang */\n.highlight .cm { color: #408080; font-style: italic } /* Comment.Multiline */\n.highlight .cp { color: #BC7A00 } /* Comment.Preproc */\n.highlight .cpf { color: #408080; font-style: italic } /* Comment.PreprocFile */\n.highlight .c1 { color: #408080; font-style: italic } /* Comment.Single */\n.highlight .cs { color: #408080; font-style: italic } /* Comment.Special */\n.highlight .gd { color: #A00000 } /* Generic.Deleted */\n.highlight .ge { font-style: italic } /* Generic.Emph */\n.highlight .gr { color: #FF0000 } /* Generic.Error */\n.highlight .gh { color: #000080; font-weight: bold } /* Generic.Heading */\n.highlight .gi { color: #00A000 } /* Generic.Inserted */\n.highlight .go { color: #888888 } /* Generic.Output */\n.highlight .gp { color: #000080; font-weight: bold } /* Generic.Prompt */\n.highlight .gs { font-weight: bold } /* Generic.Strong */\n.highlight .gu { color: #800080; font-weight: bold } /* Generic.Subheading */\n.highlight .gt { color: #0044DD } /* Generic.Traceback */\n.highlight .kc { color: #008000; font-weight: bold } /* Keyword.Constant */\n.highlight .kd { color: #008000; font-weight: bold } /* Keyword.Declaration */\n.highlight .kn { color: #008000; font-weight: bold } /* Keyword.Namespace */\n.highlight .kp { color: #008000 } /* Keyword.Pseudo */\n.highlight .kr { color: #008000; font-weight: bold } /* Keyword.Reserved */\n.highlight .kt { color: #B00040 } /* Keyword.Type */\n.highlight .m { color: #666666 } /* Literal.Number */\n.highlight .s { color: #BA2121 } /* Literal.String */\n.highlight .na { color: #7D9029 } /* Name.Attribute */\n.highlight .nb { color: #008000 } /* Name.Builtin */\n.highlight .nc { color: #0000FF; font-weight: bold } /* Name.Class */\n.highlight .no { color: #880000 } /* Name.Constant */\n.highlight .nd { color: #AA22FF } /* Name.Decorator */\n.highlight .ni { color: #999999; font-weight: bold } /* Name.Entity */\n.highlight .ne { color: #D2413A; font-weight: bold } /* Name.Exception */\n.highlight .nf { color: #0000FF } /* Name.Function */\n.highlight .nl { color: #A0A000 } /* Name.Label */\n.highlight .nn { color: #0000FF; font-weight: bold } /* Name.Namespace */\n.highlight .nt { color: #008000; font-weight: bold } /* Name.Tag */\n.highlight .nv { color: #19177C } /* Name.Variable */\n.highlight .ow { color: #AA22FF; font-weight: bold } /* Operator.Word */\n.highlight .w { color: #bbbbbb } /* Text.Whitespace */\n.highlight .mb { color: #666666 } /* Literal.Number.Bin */\n.highlight .mf { color: #666666 } /* Literal.Number.Float */\n.highlight .mh { color: #666666 } /* Literal.Number.Hex */\n.highlight .mi { color: #666666 } /* Literal.Number.Integer */\n.highlight .mo { color: #666666 } /* Literal.Number.Oct */\n.highlight .sa { color: #BA2121 } /* Literal.String.Affix */\n.highlight .sb { color: #BA2121 } /* Literal.String.Backtick */\n.highlight .sc { color: #BA2121 } /* Literal.String.Char */\n.highlight .dl { color: #BA2121 } /* Literal.String.Delimiter */\n.highlight .sd { color: #BA2121; font-style: italic } /* Literal.String.Doc */\n.highlight .s2 { color: #BA2121 } /* Literal.String.Double */\n.highlight .se { color: #BB6622; font-weight: bold } /* Literal.String.Escape */\n.highlight .sh { color: #BA2121 } /* Literal.String.Heredoc */\n.highlight .si { color: #BB6688; font-weight: bold } /* Literal.String.Interpol */\n.highlight .sx { color: #008000 } /* Literal.String.Other */\n.highlight .sr { color: #BB6688 } /* Literal.String.Regex */\n.highlight .s1 { color: #BA2121 } /* Literal.String.Single */\n.highlight .ss { color: #19177C } /* Literal.String.Symbol */\n.highlight .bp { color: #008000 } /* Name.Builtin.Pseudo */\n.highlight .fm { color: #0000FF } /* Name.Function.Magic */\n.highlight .vc { color: #19177C } /* Name.Variable.Class */\n.highlight .vg { color: #19177C } /* Name.Variable.Global */\n.highlight .vi { color: #19177C } /* Name.Variable.Instance */\n.highlight .vm { color: #19177C } /* Name.Variable.Magic */\n.highlight .il { color: #666666 } /* Literal.Number.Integer.Long */</style><div class=\"highlight\"><pre><span></span><span class=\"c1\">#ASDF 1.0.0</span>\n<span class=\"c1\">#ASDF_STANDARD 1.5.0</span>\n<span class=\"nt\">%YAML</span> <span class=\"m\">1.1</span>\n<span class=\"nt\">%TAG</span> <span class=\"kt\">!</span> <span class=\"kt\">tag:stsci.edu:asdf/</span>\n<span class=\"nn\">---</span> <span class=\"kt\">!core/asdf-1.1.0</span>\n<span class=\"nt\">asdf_library</span><span class=\"p\">:</span> <span class=\"kt\">!core/software-1.0.0</span> <span class=\"p p-Indicator\">{</span><span class=\"nt\">author</span><span class=\"p\">:</span> <span class=\"nv\">The ASDF Developers</span><span class=\"p p-Indicator\">,</span><span class=\"nt\"> homepage</span><span class=\"p\">:</span> <span class=\"s\">&#39;http://github.com/asdf-format/asdf&#39;</span><span class=\"p p-Indicator\">,</span>\n<span class=\"nt\">  name</span><span class=\"p\">:</span> <span class=\"nv\">asdf</span><span class=\"p p-Indicator\">,</span><span class=\"nt\"> version</span><span class=\"p\">:</span> <span class=\"nv\">2.8.0.dev107+g8ccee8b</span><span class=\"p p-Indicator\">}</span>\n<span class=\"nt\">history</span><span class=\"p\">:</span>\n  <span class=\"nt\">extensions</span><span class=\"p\">:</span>\n  <span class=\"p p-Indicator\">-</span> <span class=\"kt\">!core/extension_metadata-1.0.0</span>\n    <span class=\"nt\">extension_class</span><span class=\"p\">:</span> <span class=\"l l-Scalar l-Scalar-Plain\">asdf.extension.BuiltinExtension</span>\n    <span class=\"nt\">software</span><span class=\"p\">:</span> <span class=\"kt\">!core/software-1.0.0</span> <span class=\"p p-Indicator\">{</span><span class=\"nt\">name</span><span class=\"p\">:</span> <span class=\"nv\">asdf</span><span class=\"p p-Indicator\">,</span><span class=\"nt\"> version</span><span class=\"p\">:</span> <span class=\"nv\">2.8.0.dev107+g8ccee8b</span><span class=\"p p-Indicator\">}</span>\n  <span class=\"p p-Indicator\">-</span> <span class=\"kt\">!core/extension_metadata-1.0.0</span>\n    <span class=\"nt\">extension_class</span><span class=\"p\">:</span> <span class=\"l l-Scalar l-Scalar-Plain\">weldx.asdf.extension.WeldxExtension</span>\n    <span class=\"nt\">software</span><span class=\"p\">:</span> <span class=\"kt\">!core/software-1.0.0</span> <span class=\"p p-Indicator\">{</span><span class=\"nt\">name</span><span class=\"p\">:</span> <span class=\"nv\">weldx</span><span class=\"p p-Indicator\">,</span><span class=\"nt\"> version</span><span class=\"p\">:</span> <span class=\"nv\">0.2.0+30.gabb76c1.dirty</span><span class=\"p p-Indicator\">}</span>\n<span class=\"nt\">equipment</span><span class=\"p\">:</span> <span class=\"kt\">!&lt;tag:weldx.bam.de:weldx/equipment/generic_equipment-1.0.0&gt;</span>\n  <span class=\"nt\">name</span><span class=\"p\">:</span> <span class=\"l l-Scalar l-Scalar-Plain\">my_equipment</span>\n  <span class=\"nt\">sources</span><span class=\"p\">:</span> <span class=\"p p-Indicator\">[]</span>\n  <span class=\"nt\">data_transformations</span><span class=\"p\">:</span> <span class=\"p p-Indicator\">[]</span>\n  <span class=\"nt\">wx_metadata</span><span class=\"p\">:</span> <span class=\"p p-Indicator\">{</span><span class=\"nt\">serial_number</span><span class=\"p\">:</span> <span class=\"nv\">1234</span><span class=\"p p-Indicator\">}</span>\n<span class=\"nn\">...</span>\n</pre></div>\n"
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "buffer = weldx.asdf.utils._write_buffer({\"equipment\":my_equipment})\n",
+    "weldx.asdf.utils.notebook_fileprinter(buffer)"
    ],
    "metadata": {
     "collapsed": false,
