--- a/tutorials/quality_standards.ipynb
+++ b/tutorials/quality_standards.ipynb
@@ -129,7 +129,7 @@
       "        |-- manifests\n",
       "        |   `-- my_standard-1.0.0.yaml\n",
       "        `-- schemas\n",
-      "            `-- my_generic_epuipment_schema-1.0.0.yaml\n"
+      "            `-- my_generic_equipment_schema-1.0.0.yaml\n"
      ]
     }
    ],
@@ -140,7 +140,7 @@
     "mem_fs.listdir(\"\")\n",
     "\n",
     "mem_fs.create(\"resources/my_organization/manifests/my_standard-1.0.0.yaml\")\n",
-    "mem_fs.create(\"resources/my_organization/schemas/my_generic_epuipment_schema-1.0.0.yaml\")\n",
+    "mem_fs.create(\"resources/my_organization/schemas/my_generic_equipment_schema-1.0.0.yaml\")\n",
     "mem_fs.tree()"
    ],
    "metadata": {
@@ -163,7 +163,7 @@
     "end.\n",
     "Here we will only use a single manifest file called `my_standard-1.0.0.yaml`.\n",
     "\n",
-    "Now before we start looking into the different files, let's create an instance of the `GenericEpuipment` class that we\n",
+    "Now before we start looking into the different files, let's create an instance of the `GenericEquipment` class that we\n",
     "want to serialize using a new quality standard:"
    ],
    "metadata": {
@@ -305,7 +305,7 @@
    "outputs": [],
    "source": [
     "# write to the file\n",
-    "with mem_fs.open(\"resources/my_organization/schemas/my_generic_epuipment_schema-1.0.0.yaml\", \"w\") as file:\n",
+    "with mem_fs.open(\"resources/my_organization/schemas/my_generic_equipment_schema-1.0.0.yaml\", \"w\") as file:\n",
     "    file.write(schema_file)"
    ],
    "metadata": {
@@ -346,7 +346,7 @@
     "# mappings\n",
     "tags:\n",
     "- uri: \"http://weldx.bam.de/schemas/weldx/equipment/generic_equipment-1.0.0\"\n",
-    "  file: \"my_generic_epuipment_schema-1.0.0\"\n",
+    "  file: \"my_generic_equipment_schema-1.0.0\"\n",
     "\"\"\""
    ],
    "metadata": {
@@ -389,10 +389,10 @@
     "`http://weldx.bam.de/schemas/weldx/equipment/generic_equipment-1.0.0`.\n",
     "Additionally, each item of the YAML list needs a `file` property which specifies the relative file path of the new\n",
     "schema inside the `schemas` directory, omitting the file extension.\n",
-    "So in our case we use `file: \"my_generic_epuipment_schema-1.0.0`\n",
+    "So in our case we use `file: \"my_generic_equipment_schema-1.0.0`\n",
     "\n",
     "\n",
-    "Now all that remains is to register our new standard to WelDX and acitvate it.\n",
+    "Now all that remains is to register our new standard to WelDX and activate it.\n",
     "Since we didn't install it, we need to do the registration manually using the 'Config.add_quality_standard' method.\n",
     "To do so, we create an instance of the `QualityStandard` class.\n",
     "This class needs to know where the root directory of your standard is located (the directory that contains the\n",
