add CSM.relabel function

--- a/tutorials/transformations_02_coordinate_system_manager.ipynb
+++ b/tutorials/transformations_02_coordinate_system_manager.ipynb
@@ -215,7 +215,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Updating and deleting coordinate systems\n",
+    "## Renaming existing coordinate systems\n",
+    "Existing coordinate system nodes can be renamed using `CoordinateSystemManager.relabel`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csm.relabel({\"torch\":\"TCP\"})\n",
+    "csm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csm.relabel({\"TCP\":\"torch\"})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Updating and deleting coordinate system transformations\n",
     "\n",
     "A coordinate system can be updated by simply calling `add_cs` again with the correct reference system and an updated `LocalCoordinateSystem` instance. For example, to update the torch system, one could do the following:"
    ]
@@ -942,13 +969,6 @@
     "> **TODO** \n",
     "- Time dependent data"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
