raise `NotImplementedError` when trying to relabel nodes with subsystem CSM

--- a/tutorials/transformations_02_coordinate_system_manager.ipynb
+++ b/tutorials/transformations_02_coordinate_system_manager.ipynb
@@ -216,7 +216,9 @@
    "metadata": {},
    "source": [
     "## Renaming existing coordinate systems\n",
-    "Existing coordinate system nodes can be renamed using `CoordinateSystemManager.relabel`."
+    "Existing coordinate system nodes can be renamed using `CoordinateSystemManager.relabel`.\n",
+    "\n",
+    "*Note: it is not possible to rename nodes on `CSM` instances that contain subsystems of any form.*"
    ]
   },
   {
