fix tutorial typo

--- a/tutorials/welding_example_01_basics.ipynb
+++ b/tutorials/welding_example_01_basics.ipynb
@@ -326,7 +326,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The two points and timestamps are enough to create the linear moving coordinate system. We can interpolate the movement with a higher resolution later.to_base_units"
+    "The two points and timestamps are enough to create the linear moving coordinate system. We can interpolate the movement with a higher resolution later."
    ]
   },
   {
